<resources>
    <string name="app_name">JDiary</string>
    <string name="loading_diaries_error">Error while loading diaries</string>
    <string name="menu_delete_diary">Delete diary</string>
    <string name="navigation_view_header_title">Recording Good Times</string>
    <string name="successfully_saved_diary_message">Diary saved</string>
    <string name="list_title">Diary List</string>
    <string name="statistics_title">Statistics</string>
    <string name="settings_title">Settings</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="loading">LOADING</string>
    <string name="no_diaries_all">You have no diaries!</string>
    <string name="about_intro">JDiary is a free diary app. You can record all the good times with it. Of course, you can write your bad times as you wish because it has lock stopping other to watch.</string>
    <string name="about_title">About it</string>
    <string name="translate_title">Help translate it</string>
    <string name="share_title">Share it</string>
    <string name="rate_title">Rate it</string>
    <string name="feedback_title">Feedback</string>
    <string name="about_app_intro_hint">Intro: </string>
    <string name="untitled">Untitled</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="streak_card_title_fmt">%1$d Words Per Day</string>
    <string name="longest_punch_fmt">Longest Streak: %1$d</string>
    <string name="current_punch_fmt">Current Streak: %1$d</string>
    <string name="statastics_for">Statastics For</string>
    <string name="share_app_content_fmt">I like the diary book app so much, share it to you.\n %1$s</string>
    <string name="pref_pin_lock">Diary Lock</string>
    <string name="pref_pin_lock_summ">Set a password to stop other to view your diary</string>
    <string name="app_lock_new_password_hint">New password</string>
    <string name="app_lock_password_confirm_hint">Confirm password</string>
    <string name="input_password_hint">Input Diary Password</string>
    <string name="password_set_dialog_title">Password Set</string>
    <string name="keyboard">Keyboard</string>
    <string name="location">Location</string>
    <string name="weather">Weather</string>
    <string name="emotion">Emotion</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_service_error">Google service error</string>
    <string name="week_of_year_fmt">Week %1$d</string>
    <string name="edit_tools_status_location_default">You can select location by clicking the edit button</string>
    <string name="editor_hint">Please Input Here</string>
    <string name="error_no_google_play">Google Play isn\'t installed.</string>
    <string name="guide_open_permission">Please open permissions</string>
    <string name="search">Search</string>
    <string name="search_hint">Please Search</string>
    <string name="pref_back_to_local_summary">You can backup all the diary and restore them at any time</string>
    <string name="pref_restore_from_local_summary">You can restore the diary which you backup</string>
    <string name="pref_backup_restore_title"><![CDATA[Backup&Restore]]></string>
    <string name="pref_backup_to_local_title">Backup to local</string>
    <string name="pref_restore_from_local_title">Restore from local</string>
    <string name="restore_from_local_dialog_title">Restore from local:</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="saving">Saving...</string>
    <string name="restore">Restoring...</string>
    <string name="pref_category_privacy">Privacy</string>
    <string name="app_slogan">Write the current and remamber the last</string>
    <string name="successfully_backup">Backup Successfully</string>
    <string name="fmt_statistics_year">%1$d</string>
    <string name="fmt_statistics_month">%1$d</string>
    <string name="fmt_statistics_week">%1$d</string>
    <string name="fmt_statistics_day">%1$d</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_default_font_size_title">Font Size</string>
    <string name="pref_default_font_size_summ">Set the default font size of diary</string>
    <string name="pref_default_editor_style_title">Background Style</string>
    <string name="pref_default_editor_style_summ">Set the default background of diary</string>
    <string name="meter_counter">Meter Counter</string>
    <string name="add_new_record">Add New Record</string>
    <string name="common_name">name:</string>
    <string name="meter_counter_value">Value:</string>
    <string name="meter_counter_unit" >Unit:</string>
</resources>
