<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/list_navigation_menu_item"
            android:icon="@drawable/ic_list"
            android:title="@string/list_title" />
        <item
            android:id="@+id/statistics_navigation_menu_item"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistics_title" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none"
        android:menuCategory="container">
        <item
            android:id="@+id/rate_navigation_menu_item"
            android:icon="@drawable/ic_star"
            android:title="@string/rate_title" />
        <item
            android:id="@+id/feedback_navigation_menu_item"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback_title" />
        <item
            android:id="@+id/translate_navigation_menu_item"
            android:icon="@drawable/ic_translate"
            android:title="@string/translate_title" />
        <item
            android:id="@+id/share_navigation_menu_item"
            android:icon="@drawable/ic_share"
            android:title="@string/share_title" />
        <item
            android:id="@+id/about_navigation_menu_item"
            android:icon="@drawable/ic_statistics"
            android:title="@string/about_title" />
    </group>
</menu>