<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/nameHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:labelFor="@+id/name"
        android:text="@string/common_name"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nameHint"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/nameHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameHint"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/valueHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameHint"
        android:layout_marginBottom="8dp"
        android:labelFor="@+id/meterCounterValue"
        android:text="@string/meter_counter_value"
        app:layout_constraintBottom_toBottomOf="@+id/meterCounterValue"
        app:layout_constraintStart_toStartOf="@+id/nameHint" />

    <EditText
        android:id="@+id/meterCounterValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/valueHint"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@id/valueHint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/unitHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valueHint"
        android:layout_marginBottom="8dp"
        android:labelFor="@+id/meterCounterUnit"
        android:text="@string/meter_counter_unit"
        app:layout_constraintBottom_toBottomOf="@+id/meterCounterUnit"
        app:layout_constraintStart_toStartOf="@+id/valueHint" />

    <EditText
        android:id="@+id/meterCounterUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/unitHint"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@id/unitHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/meterCounterValue"
        app:layout_constraintTop_toBottomOf="@+id/meterCounterValue" />
</androidx.constraintlayout.widget.ConstraintLayout>